--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,6 +1,6 @@
 #bloc_page {
     max-width: 90%;
-    height: 1600px;
+    min-height: 1500px;
     padding-top: 2%;
     padding-left: 5%;
     padding-right: 5%;
@@ -32,10 +32,17 @@ p {
     text-align: justify;
 }
 
-#header_basic ul {
-    display: flex;
-    justify-content: space-around;
-    padding-right: 10%;
+#header_basic  {
+    margin-bottom: 5%;
+    margin-top: 1%;
+}
+
+.menuTop {
+    
+}
+
+.menuTop li {
+    padding-left: 100%;
 }
 
 .form {
@@ -138,4 +145,12 @@ p {
 
 .validationCom p{
     text-align: center;
+}
+
+#accordionExample {
+    padding-left: 20%;
+}
+
+#accordionFlushExample {
+    padding-left: 20%;
 }
