--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -10,48 +10,31 @@
     border: 2px solid black;
 }
 
-#content {
-    min-height: 1000px;
-}
-
-.alert-success {
-    max-width: 20%;
-}
-
-.alert-danger {
-    max-width: 20%;
-}
-
 h1 {
     text-align: center;
 }
 
-p {
-    padding-left: 5%;
-    justify-content: center;
-    text-align: justify;
-}
-
-#header_basic  {
-    margin-bottom: 5%;
-    margin-top: 1%;
-}
-
-.menuTop {
-    
-}
-
-.menuTop li {
-    padding-left: 100%;
-}
-
-.form {
-    padding-left: 20%;
+#content {
+    min-height: 1000px;
     padding-top: 3%;
-    padding-bottom: 10%;
-    border-top: 2px solid black;
 }
 
+/* section Menu Navbar */
+
+.menuNavbar a {
+    color: black;
+}
+
+.menuNavbar a:hover {
+    color: black;
+    border-bottom: 2px solid black;
+}
+
+.formDrop {
+    border: 1px solid black;
+    margin: 5%;
+    padding: 5%;
+}
 /* Section footer */
 
 #footer_basic {
