--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'Aquire';
+    src: url('../font/Aquire-BW0ox.otf') format("opentype");
+}
+@font-face {
+    font-family: "Aquire Bold";
+    src: url('../font/AquireBold-8Ma60.otf') format("opentype");
+}
+
+html {
+    background-color: white ;
+    font-size: 100%;
+}
+
 #bloc_page {
     max-width: 90%;
     min-height: 1500px;
@@ -7,21 +21,34 @@
     margin-top: 2%;
     margin-left: 5%;
     margin-bottom: 2%;
-    border: 2px solid black;
+    background-color: white;
 }
 
-h1 {
-    text-align: center;
+/* Haut de page */
+
+.headerPage {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 3%;
 }
 
-#content {
-    min-height: 1000px;
-    padding-top: 3%;
+.headerPage h1 {
+    padding-top: 1%;
+    margin-right: 10%;
+    font-family: "Aquire", "sans-serif";
+    font-size: 3.1rem;
 }
 
 /* section Menu Navbar */
 
+#header_basic {
+    border-bottom: 2px solid black;
+    padding-bottom: 3%;
+}
+
 .menuNavbar a {
+    font-family: "Aquire", "sans-serif";
+    font-size: 1.2em;
     color: black;
 }
 
@@ -35,6 +62,53 @@ h1 {
     margin: 5%;
     padding: 5%;
 }
+
+/* Contenu */
+
+#content {
+    text-align: justify;
+    margin-left: 5%;
+    width: 90%;
+    min-height: 1000px;
+    padding-top: 1%;
+    margin-top: 3%;
+    font-family: "Aquire", "Aquire Bold", "sans-serif";
+}
+.alert-success, .alert-danger {
+    font-family: "Aquire", "AquireBold", "sans-serif";
+}
+
+/* Contenu liste articles */
+
+.list_billet {
+    max-width: 75%;
+    border-bottom: 2px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 10%;
+    font-family: "Aquire", "sans-serif";
+    font-size: 1.2rem;
+}
+
+.list_billet h5 {
+    font-size: 1.5rem;
+    padding-bottom: 1%;
+}
+
+.list_billet a {
+    color: green;
+    text-decoration: none;
+}
+
+.list_billet a:hover {
+    color: black;
+    border-bottom: 1px solid black;
+}
+
+/* Contenu détail article */
+
+
+
 /* Section footer */
 
 #footer_basic {
