--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -35,12 +35,13 @@ body {
     display: flex;
     justify-content: space-around;
     padding-bottom: 3%;
+    font-family: "Aquire", "sans-serif";
 }
 
 .headerPage h1 {
     padding-top: 1%;
+    margin-left: 10%;
     margin-right: 10%;
-    font-family: "Aquire", "sans-serif";
     font-size: 3.1rem;
 }
 
@@ -182,6 +183,17 @@ body {
     padding-top: 1%;
     margin-left: 4%;
     margin-bottom: 2%;
+}
+
+.updateArticle {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 10%;
+}
+
+.deleteArticle {
+    margin-left: 25%;
+    margin-top: 1%;
 }
 
 /* ---------- Commentaire détail article ---------- */
@@ -388,10 +400,6 @@ footer {
 }
 
 /* ---------- Modération des commentaires ---------- */
-
-.commentModeration {
-
-}
 
 .commentModeration h4 {
     text-align: center;
