--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -446,6 +446,29 @@ body {
 
 }
 
+/* ---------- Qui suis-je ---------- */
+
+.whoIAm {
+    margin: auto;
+    font-family: "Raleway", sans-serif;
+    font-size: 1.2rem;
+}
+
+.whoIAm .col-8 {
+    margin-top: 3%;
+}
+
+.whoIAm img {
+    margin-left: 15%;
+    margin-bottom: 5%;
+}
+
+.CV embed {
+    margin-top: 5%;
+    margin-left: 13%;
+    margin-right: 0%;
+}
+
 /* ------------------------------ Section footer ------------------------------ */
 
 footer {
